plogapp/tests/errors/KeywordAsAttrName.plog
sorts
#s = {a}.
attributes
random: #s -> #s.
statements

